[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcode-proxy"
version = "0.1.0"
description = "A lightweight AI Proxy Server for Xcode, supporting custom models and OpenAI compatibility."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "User", email = "user@example.com"}
]
keywords = ["xcode", "proxy", "ai", "openai", "copilot"]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/example/xcode-proxy"

[project.scripts]
xcode-proxy = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
